feat: implement clean architecture for the project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon and icons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon-16x16.svg"
+      sizes="16x16"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon-32x32.svg"
+      sizes="32x32"
+    />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+
+    <!-- Meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal Manager - Securely manage your passwords, organize your thoughts with notes, and curate your reading list in one beautiful, intuitive platform." />
-    <meta name="keywords" content="password manager, notes, books, personal organization, digital manager" />
-    <meta name="author" content="Personal Manager" />
-    <title>Personal Manager - Your Digital Life Organizer</title>
+    <meta
+      name="description"
+      content="Endurance - Secure Password & Notes Manager. Keep your digital life protected with enterprise-grade encryption and intuitive organization tools."
+    />
+    <meta
+      name="keywords"
+      content="password manager, secure passwords, password generator, notes organizer, digital security, privacy, endurance, encryption"
+    />
+    <meta name="author" content="Endurance Team" />
+    <meta name="theme-color" content="#3b82f6" />
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Endurance - Secure Password & Notes Manager"
+    />
+    <meta
+      property="og:description"
+      content="Keep your digital life protected with enterprise-grade encryption and intuitive organization tools."
+    />
+    <meta property="og:site_name" content="Endurance" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta
+      name="twitter:title"
+      content="Endurance - Secure Password & Notes Manager"
+    />
+    <meta
+      name="twitter:description"
+      content="Keep your digital life protected with enterprise-grade encryption and intuitive organization tools."
+    />
+
+    <title>Endurance - Secure Password & Notes Manager</title>
   </head>
   <body>
     <div id="app"></div>
