style: UI and infrastructure improved

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       content="Keep your digital life protected with enterprise-grade encryption and intuitive organization tools."
     />
 
-    <title>Endurance - Secure Password & Notes Manager</title>
+    <title>Endurance</title>
   </head>
   <body>
     <div id="app"></div>
